# progaf

./: .gitignore  Application.py  BlobDetector.py  Camera.py  Profiler.py  Projector.py  PyGameApp.py  README.md  RectDetector.py  contributing.md  requirements.txt  setup.cfg
examples/: BallTrackingApp.py  README.md
examples/Balloons/: Balloons (Selfie).py  readme.md
examples/Balls/: Balls (Selfie).py
examples/Balls/Themes/Spooky/Sprites/: Ghost00.xcf  Ghost02.xcf  Ghost04.xcf  Ghost05.xcf  Ghost06.xcf  Ghost10.xcf  Ghost12.xcf
examples/Balls/themes/: GameArt.pptx
examples/Balls/themes/Spooky/Sprites/: Ghost01.xcf  Ghost03.xcf  Ghost07.xcf  Ghost08.xcf  Ghost09.xcf  Ghost11.xcf  Ghost13.xcf  Hand00.xcf
examples/HandPong/: HandPong (Selfie).py  readme.md
examples/HandPong/sprites/: Thumbs.db
examples/PhotoBooth/: PhotoBooth (Selfie).py  Test01.py  Test02.py  readme.md
progaf/: Application.py  BallDetector.py  BlobDetector.py  Camera.py  CentroidTracker.py  DebugMonitor.py  DepthCamera.py  Detector.py  FaceDetector.py  FaceMeshDetector.py  HandDetector.py  LaserDetector.py  MagicWallDetector.py  Monitor.py  Panda3DApp.py  Profiler.py  Projector.py  PyGameApp.py  RectDetector.py  ShapeDetector.py  ShapeFactory.py  __init__.py
