[metadata]
name = progaf
version = 0.2.0rc3
author = Keko
author_email = jcfandinocal@gmail.com
description = Projection Games Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcfandinocal/progaf
project_urls =
    Bug Tracker = https://github.com/jcfandinocal/progaf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = progaf
python_requires = >=3.6
install_requires =
    numpy
    opencv-python
    pygame
    scipy
    panda3d
    mediapipe
